// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagPicker(THE_GLORIOUS_NONE_TAG, false) matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TagButton Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "background": "#969696",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="TagDisplay"
    >
      <span
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
        title="Tag"
      >
        <img
          alt="Tag"
          className="SamwiseIconDefaultStyle CenterIcon"
          src="/svgs/tag-light.svg"
        />
      </span>
       add class  
    </span>
  </button>
</div>
`;

exports[`TagPicker(THE_GLORIOUS_NONE_TAG, true) matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TagButton Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "background": "#969696",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="TagDisplay"
    >
      <span
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
        title="Tag"
      >
        <img
          alt="Tag"
          className="SamwiseIconDefaultStyle CenterIcon"
          src="/svgs/tag-light.svg"
        />
      </span>
       add class  
    </span>
  </button>
  <div
    className="NewTaskClassPick"
  >
    <ul
      className="NewTaskClass"
    >
      <li
        style={
          Object {
            "--custom-color": "green",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Baz
      </li>
      <li
        style={
          Object {
            "--custom-color": "blue",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Bar
      </li>
      <li
        style={
          Object {
            "--custom-color": "red",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Foo
      </li>
      <li
        style={
          Object {
            "--custom-color": "#969696",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        None
      </li>
    </ul>
  </div>
</div>
`;

exports[`TagPicker(bar, false) matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TagButton Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "background": "blue",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="TagDisplay"
    >
      Bar
    </span>
    <button
      className="ResetButton"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
  </button>
</div>
`;

exports[`TagPicker(bar, true) matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TagButton Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "background": "blue",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="TagDisplay"
    >
      Bar
    </span>
    <button
      className="ResetButton"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
  </button>
  <div
    className="NewTaskClassPick"
  >
    <ul
      className="NewTaskClass"
    >
      <li
        style={
          Object {
            "--custom-color": "green",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Baz
      </li>
      <li
        style={
          Object {
            "--custom-color": "blue",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Bar
      </li>
      <li
        style={
          Object {
            "--custom-color": "red",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Foo
      </li>
      <li
        style={
          Object {
            "--custom-color": "#969696",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        None
      </li>
    </ul>
  </div>
</div>
`;

exports[`TagPicker(baz, false) matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TagButton Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "background": "green",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="TagDisplay"
    >
      Baz
    </span>
    <button
      className="ResetButton"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
  </button>
</div>
`;

exports[`TagPicker(baz, true) matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TagButton Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "background": "green",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="TagDisplay"
    >
      Baz
    </span>
    <button
      className="ResetButton"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
  </button>
  <div
    className="NewTaskClassPick"
  >
    <ul
      className="NewTaskClass"
    >
      <li
        style={
          Object {
            "--custom-color": "green",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Baz
      </li>
      <li
        style={
          Object {
            "--custom-color": "blue",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Bar
      </li>
      <li
        style={
          Object {
            "--custom-color": "red",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Foo
      </li>
      <li
        style={
          Object {
            "--custom-color": "#969696",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        None
      </li>
    </ul>
  </div>
</div>
`;

exports[`TagPicker(foo, false) matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TagButton Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "background": "red",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="TagDisplay"
    >
      Foo
    </span>
    <button
      className="ResetButton"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
  </button>
</div>
`;

exports[`TagPicker(foo, true) matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TagButton Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "background": "red",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="TagDisplay"
    >
      Foo
    </span>
    <button
      className="ResetButton"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
  </button>
  <div
    className="NewTaskClassPick"
  >
    <ul
      className="NewTaskClass"
    >
      <li
        style={
          Object {
            "--custom-color": "green",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Baz
      </li>
      <li
        style={
          Object {
            "--custom-color": "blue",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Bar
      </li>
      <li
        style={
          Object {
            "--custom-color": "red",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        Foo
      </li>
      <li
        style={
          Object {
            "--custom-color": "#969696",
          }
        }
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        None
      </li>
    </ul>
  </div>
</div>
`;
